--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="password">Password</string>
     <string name="loginButton">Login</string>
     <string name="signInButton">Sign-in</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="registrationEmail">Insert email</string>
+    <string name="registrationConfirmEmail">Confirm email</string>
 </resources>
