--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="registrationEmail">Insert email</string>
     <string name="registrationConfirmEmail">Confirm email</string>
+    <string name="registrationPassword">Insert password</string>
+    <string name="registrationPasswordConfirm">Confirm password</string>
 </resources>
