--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
-    <string name="app_name">progetto SIM android</string>
+    <string name="app_name" translatable="false">progetto SIM android</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="loginButton">Login</string>
     <string name="signInButton">Sign-in</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="registrationEmail">Insert email</string>
     <string name="registrationConfirmEmail">Confirm email</string>
     <string name="registrationPassword">Insert password</string>
