Added register and cancel buttons to registration form

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -8,4 +8,6 @@
     <string name="registrationConfirmEmail">Confermare email</string>
     <string name="registrationPassword">Inserire password</string>
     <string name="registrationPasswordConfirm">Confermare password</string>
+    <string name="registrationButton">Registrazione</string>
+    <string name="registrationCancel">Annulla</string>
 </resources>
