--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -3,7 +3,7 @@
     <string name="username">Nome utente</string>
     <string name="password">Password</string>
     <string name="loginButton">Login</string>
-    <string name="signInButton">Registrazione</string>
+    <string name="signUpButton">Registrazione</string>
     <string name="registrationEmail">Inserire email</string>
     <string name="registrationConfirmEmail">Confermare email</string>
     <string name="registrationPassword">Inserire password</string>
