--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="loginButton">Login</string>
-    <string name="signInButton">Sign-in</string>
+    <string name="signUpButton">Sign-up</string>
     <string name="registrationEmail">Insert email</string>
     <string name="registrationConfirmEmail">Confirm email</string>
     <string name="registrationPassword">Insert password</string>
