--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -14,4 +14,5 @@
     <string name="email_mismatch">Le email non coincidono</string>
     <string name="password_required">Campo obbligatorio</string>
     <string name="password_mismatch">Le password non coincidono</string>
+    <string name="user_account">Account</string>
 </resources>
