--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="email_mismatch">Emails not matching</string>
     <string name="password_required">Field required</string>
     <string name="password_mismatch">Passwords not matching</string>
+    <string name="user_account">Account</string>
 </resources>
