--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name" translatable="false">progetto SIM android</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="loginButton">Login</string>
-    <string name="signUpButton">Sign-up</string>
-    <string name="registrationEmail">Insert email</string>
-    <string name="registrationConfirmEmail">Confirm email</string>
-    <string name="registrationPassword">Insert password</string>
-    <string name="registrationPasswordConfirm">Confirm password</string>
-    <string name="registrationButton">Register</string>
-    <string name="registrationCancel">Cancel</string>
+    <string name="login_button">Login</string>
+    <string name="sign_up_button">Sign-up</string>
+    <string name="registration_email">Insert email</string>
+    <string name="registration_confirm_email">Confirm email</string>
+    <string name="registration_password">Insert password</string>
+    <string name="registration_password_confirm">Confirm password</string>
+    <string name="registration_button">Register</string>
+    <string name="registration_cancel">Cancel</string>
     <string name="email_required">Field required</string>
     <string name="email_mismatch">Emails not matching</string>
     <string name="password_required">Field required</string>
