Set menu top bar correctly, system default disabled with extra item tags in themes.xml

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -15,4 +15,5 @@
     <string name="password_required">Campo obbligatorio</string>
     <string name="password_mismatch">Le password non coincidono</string>
     <string name="user_account">Account</string>
+    <string name="settings">Settings</string>
 </resources>
