--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -15,5 +15,7 @@
     <string name="password_required">Campo obbligatorio</string>
     <string name="password_mismatch">Le password non coincidono</string>
     <string name="user_account">Account</string>
-    <string name="settings">Settings</string>
+    <string name="settings">Impostazioni</string>
+    <string name="my_trips">I miei viaggi</string>
+    <string name="shared_trips">Viaggi condivisi</string>
 </resources>
