--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -21,4 +21,5 @@
     <string name="favorite_trips">Preferiti</string>
     <string name="trip_groups">Gruppi</string>
     <string name="new_trip_button_description">Nuovo viaggio</string>
+    <string name="trip_image">Immagine viaggio</string>
 </resources>
