--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="favorite_trips">Favourites</string>
     <string name="trip_groups">Trip groups</string>
     <string name="new_trip_button_description">New trip</string>
+    <string name="trip_image">Trip image</string>
 </resources>
