--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,14 @@
     <string name="settings">Settings</string>
     <string name="my_trips">My trips</string>
     <string name="shared_trips">Shared with me</string>
-    <string name="favorite_trips">Favourites</string>
+    <string name="favorite_trips">Favorites</string>
     <string name="trip_groups">Trip groups</string>
     <string name="new_trip_button_description">New trip</string>
     <string name="trip_image">Trip image</string>
+    <string name="trip_name">Trip name</string>
+    <string name="trip_destination">Trip destination</string>
+    <string name="trip_start_date">Start date</string>
+    <string name="trip_end_date">End date</string>
+    <string name="trip_description">Trip description</string>
+    <string name="new_images_button_description">Add new images</string>
 </resources>
