--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="new_trip_label">New trip</string>
     <string name="login_label">Login</string>
     <string name="registration_fragment_label">New user</string>
+    <string name="save_new_trip_button">Save new trip</string>
 </resources>
