--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="login_label">Login</string>
     <string name="registration_fragment_label">New user</string>
     <string name="save_new_trip_button">Save new trip</string>
+    <string name="read_images_permission_available">Permission to read images granted</string>
+    <string name="read_images_access_required">Need permission to read images</string>
+    <string name="ok">Ok</string>
+    <string name="read_images_permission_granted">Image reading permission granted</string>
+    <string name="read_images_permission_not_granted">Unable to grant permission</string>
 </resources>
