Added trip content view, using a view pager to scroll through images.

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -39,4 +39,6 @@
     <string name="read_images_permission_granted">Autorizzazione per la lettura delle immagini concessa</string>
     <string name="read_images_permission_not_granted">Autorizzazione non concessa</string>
     <string name="trip_images_uploaded">Immagini salvate su server remoto</string>
+    <string name="login_failed">Errore login</string>
+    <string name="content_trip_image_description">Immagine singola viaggio</string>
 </resources>
