--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="content_trip_image_description">Single trip image</string>
     <string name="date_picker_start">Select starting date</string>
     <string name="date_picker_end">Select ending date</string>
+    <string name="save_new_trip">Save</string>
 </resources>
