--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -44,4 +44,5 @@
     <string name="date_picker_start">Selezionare data inizio</string>
     <string name="date_picker_end">Selezionare data fine</string>
     <string name="save_new_trip">Salva</string>
+    <string name="trip_saved">Viaggio salvato con successo!</string>
 </resources>
