--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="save_new_trip">Save</string>
     <string name="trip_saved">Trip saved successfully!</string>
     <string name="trip_content_fragment_label">My trip</string>
+    <string name="user_name">Name</string>
+    <string name="user_surname">Surname</string>
+    <string name="user_settings">User data</string>
 </resources>
