--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -49,4 +49,5 @@
     <string name="user_name">Nome</string>
     <string name="user_surname">Cognome</string>
     <string name="user_settings">Dati utente</string>
+    <string name="user_logout">Logout</string>
 </resources>
