--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="user_logout">Logout</string>
     <string name="calendar_icon_description">Trip dates</string>
     <string name="location_icon_description">Trip location</string>
+    <string name="favorite_trip_icon_description">Set trip as favorite</string>
 </resources>
