Added button to toggle favorite trip

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -53,4 +53,6 @@
     <string name="calendar_icon_description">Date del viaggio</string>
     <string name="location_icon_description">Destinazione viaggio</string>
     <string name="favorite_trip_icon_description">Imposta viaggio come preferito</string>
+    <string name="set_favorite_trip">Imposta viaggio come preferito</string>
+    <string name="set_shared_trip">Imposta viaggio come condiviso</string>
 </resources>
