--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="share_trip_cancel">Cancel</string>
     <string name="share_trip_confirm">Share</string>
     <string name="search_for_users">Search for user names</string>
+    <string name="new_user_failed">Failed to create new user</string>
 </resources>
