Added user list updated remotely, able to filter list based on user input List displayed inside dialog

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -61,4 +61,5 @@
     <string name="share_trip_confirm">Condividi</string>
     <string name="search_for_users">Cerca nomi di utenti</string>
     <string name="new_user_failed">Errore durante la creazione del nuovo utente</string>
+    <string name="load_users_failed">Impossibile recuperare la lista utenti</string>
 </resources>
