--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="share_trip_confirm">Share</string>
     <string name="search_for_users">Search for user names</string>
     <string name="new_user_failed">Failed to create new user</string>
+    <string name="load_users_failed">Failed to load users list</string>
 </resources>
