--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="search_for_users">Search for user names</string>
     <string name="new_user_failed">Failed to create new user</string>
     <string name="load_users_failed">Failed to load users list</string>
+    <string name="choose_users">Pick users</string>
+    <string name="chosen_users">Picked users</string>
 </resources>
