Rewriting class, completed if condition on permission check

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -67,4 +67,5 @@
     <string name="trip_shared">Viaggio condiviso con successo</string>
     <string name="trip_shared_error">Impossibile condividere viaggio</string>
     <string name="get_images_error">Impossibile scaricare alcune immagini</string>
+    <string name="no_trips">Nessun viaggio trovato</string>
 </resources>
