--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="educational_permission_request_title">Permission to read device storage</string>
     <string name="educational_permission_request_content">Access to the device storage is needed to check for possible trip images. If it\'s not granted, some images may be missing</string>
     <string name="got_it">Understood</string>
+    <string name="trips_fragment_favorites_label">My favorite trips</string>
+    <string name="trips_fragment_shared_label">Shared with me</string>
 </resources>
