--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -73,4 +73,6 @@
     <string name="got_it">Capito</string>
     <string name="trips_fragment_favorites_label">I miei viaggi preferiti</string>
     <string name="trips_fragment_shared_label">Condivisi con me</string>
+    <string name="select_trips_mode_title">selezionati</string>
+    <string name="delete_trip">Elimina</string>
 </resources>
