--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="location_icon_description">Trip location</string>
     <string name="favorite_trip_icon_description">Set trip as favorite</string>
     <string name="set_favorite_trip">Set trip as favorite</string>
-    <string name="set_shared_trip">Set trip as shared</string>
+    <string name="share">Share</string>
     <string name="share_trip_description">Select the users to share the trip with</string>
     <string name="share_trip_title">Share trip</string>
     <string name="share_trip_cancel">Cancel</string>
@@ -74,5 +74,5 @@
     <string name="trips_fragment_favorites_label">My favorite trips</string>
     <string name="trips_fragment_shared_label">Shared with me</string>
     <string name="select_trips_mode_title">picked</string>
-    <string name="delete_trip">Delete</string>
+    <string name="delete">Delete</string>
 </resources>
