--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -79,4 +79,6 @@
     <string name="insert_user_surname">Inserire nuovo cognome utente</string>
     <string name="email_bad_format">L\'indirizzo email ha un formato non valido</string>
     <string name="password_weak">La password deve avere almeno 6 caratteri</string>
+    <string name="from">Partenza</string>
+    <string name="until">Ritorno</string>
 </resources>
