Validating picked dates as well

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -86,4 +86,6 @@
     <string name="yes">Sì</string>
     <string name="picked_images_dialog_no">Ripensandoci…</string>
     <string name="date_picker_title">Selezionare le date del viaggio</string>
+    <string name="no_dates_picked_dialog_title">Nessuna data selezionata</string>
+    <string name="no_dates_picked_dialog_message">Non sono state selezionate le date per il viaggio! Inserire le date prima di procedere</string>
 </resources>
