--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="date_picker_title">Select trip dates</string>
     <string name="no_dates_picked_dialog_title">No dates picked</string>
     <string name="no_dates_picked_dialog_message">It looks like you didn\'t pick any dates for this trip! You need to select the dates before proceeding</string>
+    <string name="trips_deleted">Selected trips have been deleted</string>
 </resources>
